--- a/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
@@ -27,8 +27,8 @@ annexation_NOR_CONQ:0 "노르웨이의 합병"
 annexation_NOR_CONQ_desc:0 "노르웨이 군은 항복했고 우리는 노르웨이를 합병했습니다. 우리의 깃발은 오슬로에 있는 이전의 의사당 건물위에서 휘날리고 있고 우리의 군사 작전은 끝을 맞이했습니다. 이제 우리는 노르웨이 파르티잔들을 진입할 작전을 시작해야만 합니다."
 annexation_SWE_CONQ:0 "스웨덴의 합병"
 annexation_SWE_CONQ_desc:0 "오늘 스웨덴 참모총장은 군의 항복을 선언했습니다. 보급품과 장비들은 항복 후 노획되었고 우리의 나라로 수송되었습니다. 완전한 승리가 선언되었습니다. "
-annexation_FLW_FRA_CONQ:0 "플랜더스-왈로니아의 운명"
-annexation_FLW_FRA_CONQ_desc:0 "독일에 의해 세워진 폭압적인 반동정부에서 플랜더스인들과 왈롱인들을 해방했으니 우리는 그들의 운명을 결정해야합니다. 우리는 플랜더스-왈로니아를 다시 세워 이번에는 생디칼리즘 정부로 만들 수도 있고 이 땅을 직접적으로 지배할 수도 있습니다. 어찌되었든 그들 중 일부는 정말로 프랑스의 영역이니까요. 다른 가능성으로는 플랜더스-왈로니아를 최종적으로 분리해 독립적인 국가로 만들 수 있습니다."
+annexation_FLW_FRA_CONQ:0 "플랑드르-왈로니아의 운명"
+annexation_FLW_FRA_CONQ_desc:0 "독일에 의해 세워진 폭압적인 반동정부에서 플랑드르인들과 왈로니아인들을 해방했으니 우리는 그들의 운명을 결정해야합니다. 우리는 플랑드르-왈로니아를 다시 세워 이번에는 생디칼리즘 정부로 만들 수도 있고 이 땅을 직접적으로 지배할 수도 있습니다. 어찌되었든 그들 중 일부는 정말로 프랑스의 영역이니까요. 다른 가능성으로는 플랑드르-왈로니아를 최종적으로 분리해 독립적인 국가로 만들 수 있습니다."
 annexation_ITAOCC_CONQ:0 "남 이탈리아의 운명"
 annexation_ITAOCC_CONQ_desc:0 "우리의 군대가 성공적으로 모든 남 이탈리아를 점유했습니다. 현지 주민들이 저항을 하고있지만 우리의 발 아래에 분쇄될 것입니다!"
 annexation_RUS_CONQ:0 "러시아의 운명"
@@ -67,7 +67,7 @@ annexation_CA_CONQ:0 "중앙 아시아의 운명"
 annexation_CA_CONQ_desc:0 "중앙 아시아 대초원에서의 작전에 이어, 우리는 이제 이 지역의 이전 주들에 대한 여러 영토를 통제하고 있습니다. 지역 지도자들, 그리고 우리 정치인들 역시 이 지역들에 대한 자치권을 호소하고 있습니다. 이 지역 전체 분할에서부터 최대 5개 주, 단일 중앙 아시아 연방으로의 합병까지 다양한 솔루션이 제안되었습니다."
 annexation_occupy_britian:0 "영국의 운명"
 annexation_occupy_britian_desc:0 "우리 군대가 영국에 상륙하고 런던을 점령함에 따라, 지방 정부 지도자들은 영국 독립의 재건을 위해 우리 군 당국에 탄원하고 있습니다."
-annexation_YUN_GER_CONQ:0 "윈난의 운명"
+annexation_YUN_GER_CONQ:0 "운남의 운명"
 annexation_YUN_GER_CONQ_desc:0 "중국 남서부 산에서 운남 군벌들과의 전쟁중인 지금, 우리는 이제 그 험악한 파벌들에 의해 잡힌 몇몇 땅을 장악하고 있습니다. 이제 어떻게 할까요? 우리는 영토를 중국 파트너에게 이전하거나 새로운 식민지로 직접 통제하거나 심지어 우호적인 정부 아래 있음에도 불구하고 운남에 새로운 독립적인 공화국을 세울 수 있습니다."
 annexation_SWI_CONQ:0 "스위스의 운명"
 annexation_SWI_CONQ_desc:0 "옛 스위스 연방을 통틀어 프랑스어, 독일어, 이탈리아어를 사용하는 주에서 우리 주둔군이 소규모 반란을 당하기 시작했습니다. 스위스에 독립성을 부여하는 것은 이 반대 의견을 진정시키는 동시에 우리 동맹을 보장해 줄 것입니다. 그러나 일부 우익 정치인들은 독일어를 사용하는 지역을 제국에 통합하거나 심지어는 프랑스와 이탈리아를 포함한 스위스의 분할까지 제안하고 있습니다."
@@ -109,12 +109,12 @@ annexation_UKR_CONQ:0 "The Annexation of Ukraine"
 annexation_UKR_CONQ_desc:0 "After a long fight with the Breadbasket of Europe, we have launched a full offensive and forced the Ukrainian Army to surrender. Kiev is now in our hands!"
 annexation_SWCHI_CONQ:0 "The Fate of South-Western China"
 annexation_SWCHI_CONQ_desc:0 "After our successful campaign in the South-Western China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice...."
-annexation_SOUTHCHI_CONQ:0 "The Fate of Southern China"
-annexation_SOUTHCHI_CONQ_desc:0 "After our successful campaign in the Southern China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annexation_TIB_CONQ:0 "The Fate of Tibet"
-annexation_TIB_CONQ_desc:0 "After our successful campaign in the Tibetan Plateau we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annexation_JAPD_CONQ:0 "The Fate of Japan"
-annexation_JAPD_CONQ_desc:0 "After our successful campaign on the Japanese islands we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annexation_SOUTHCHI_CONQ:0 "남중국의 운명"
+annexation_SOUTHCHI_CONQ_desc:0 "남중국에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
+annexation_TIB_CONQ:0 "티베트의 운명"
+annexation_TIB_CONQ_desc:0 "티벳 고원에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
+annexation_JAPD_CONQ:0 "일본의 운명"
+annexation_JAPD_CONQ_desc:0 "일본 열도에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annexation_TAI_CONQ:0 "The Fate of Taiwan"
 annexation_TAI_CONQ_desc:0 "After our successful campaign on the island of Taiwan we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
 annexation_ETH_CONQ:0 "The Fate of Ethiopia"
@@ -203,25 +203,25 @@ annexation_GERSOM_CONQ:0 "The Fate of German Somaliland"
 annexation_GERSOM_CONQ_desc:0 "We now control German Somaliland but we have a puppet close that might be better off handling the territory, should we give it to them?"
 annexation_GERADEN_CONQ:0 "The Fate of Aden"
 annexation_GERADEN_CONQ_desc:0 "We now control Aden but we have a puppet close that might be better off handling the territory, should we give it to them?"
-annexation_NWCHI_CONQ:0 "The Fate of North-Western China"
-annexation_NWCHI_CONQ_desc:0 "After our successful campaign in the steppes of North-Western China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annexation_MON_CONQ:0 "The Fate of Mongolia"
-annexation_MON_CONQ_desc:0 "After our successful campaign in the steppes of Mongolia and beating down the mad baron we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annexation_NWCHI_CONQ:0 "북서부 중국의 운명"
+annexation_NWCHI_CONQ_desc:0 "북서부 중국의 스텝에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
+annexation_MON_CONQ:0 "몽골의 운명"
+annexation_MON_CONQ_desc:0 "몽골 스텝에서의 성공적인 작전으로 미친 남작을 박살낸 후, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annexation_FNG_CONQ:0 "The Fate of Manchuria"
 annexation_FNG_CONQ_desc:0 "After our successful campaign in Manchuria we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
 annexation_SQI_CONQ:0 "The Fate of Shangqing"
 annexation_SQI_CONQ_desc:0 "After our successful campaign in the mountains of Shaanxi we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
 annexation_AST_restoring_australasia:0 "The Restoration of Australasia"
 annexation_AST_restoring_australasia_desc:0 "The Australasian government has been defeated and is currently under our control. The question before us is whether to restore its independence under the control of the loyalist Australasian Guard -- despite their extremist tendencies -- and hope they are able to maintain order, or whether we should enact the Emergency Protocols once again and assume direct rule through our Governor General."
-annexation_BRA_CONQ:0 "The Fate of Brazil"
+annexation_BRA_CONQ:0 "브라질의 운명"
 annexation_BRA_CONQ_desc:0 "After the conquest of the vast nation of Brazil we have to organise competent administrations to keep the territory under control. Even if the magnificent city of Rio is under the boots of our soldiers we can't keep an hold on it forever."
 annexation_ARG_CONQ:0 "The Fate of Argentina"
 annexation_ARG_CONQ_desc:0 "After the conquest of the vast nation of La Plata we have to organise competent administrations to keep the territory under control. Now we will need to decide on the fate of the region."
-annexation_KOR_CONQ:0 "The Fate of Korea"
-annexation_KOR_CONQ_desc:0 "After the final liberation of the proud nation of Korea we were left with the responsibility of organising the administration of the newly conquered territories, what shall we do?"
-annexation_CAN_CONQ:0 "The Fate of Canada"
-annexation_CAN_CONQ_desc:0 "Finally the corrupt Dominion of Canada, home of the British exiles has capitulated to our glorious armies. Reports say the king and his close circle fled the country but this doesn't matter, we now have control over these large portions of land, what should we do with them?"
-annexation_POR_CONQ3:0 "The CNT-FAI and the Fate of Portugal"
+annexation_KOR_CONQ:0 "한국의 운명"
+annexation_KOR_CONQ_desc:0 "자랑스러운 한민족의 해방 이후 우리는 정복한 한국의 정부를 조직 할 책임이 있습니다. 무엇을 해야할까요?"
+annexation_CAN_CONQ:0 "캐나다의 운명"
+annexation_CAN_CONQ_desc:0 "마침내 영국에서 망명정부가 도망간 캐나다 자치령을 우리의 자랑스러운 군대가 점령했습니다. 왕과 왕의 친족들이 국가를 떠났지만 그건 중요하지 않습니다, 우리는 이제 상당수의 땅을 통제하게 되었습니다. 이제 무얼해야할까요?"
+annexation_POR_CONQ3:0 "전국노동자연합과 포르투갈의 운명"
 annexation_POR_CONQ3_desc:0 "The vile imperialistic reactionaries in Lisboa have finally been forced into the sea, but we are left with the fate of the Portuguese people to decide. Do we release them as their own nation following our rightly guide principles or do we extend our claim to the rest of Iberia?"
 annexation_ANG_CONQ:0 "The Fate of Angola"
 annexation_ANG_CONQ_desc:0 "Our annexation of the former Portuguese colony of Angola left us to manage those millions of Africans far by the seas. Surely installing a local government will be easier for us to manage it, but should we trust the locals with that?"
