--- a/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
@@ -477,7 +477,7 @@ sic.30.t:0 ""
 sic.30.d:0 ""
 sic.30.a:0 ""
 
-sic.31.t:0 "양시칠리아가 협상국 가입을 요청합니다"
+sic.31.t:0 "양시칠리아의 협상국 가입 요청"
 sic.31.d:0 "양시칠리아 왕국의 특사가 오늘 오타와에 도착하여 그들의 왕국이 협상국에 가입할 가능성에 대해 논의했습니다. 우리는 그들을 들여보내주어야 할까요, 아니면 필요없다 해야 할까요?"
 sic.31.a:0 "그들을 들여보내자"
 sic.31.b:0 "우리는 그들이 필요없다"
@@ -490,20 +490,20 @@ sic.33.t:0 "협상국의 거절"
 sic.33.d:0 "캐나다는 우리의 협상국 가입 제안을 거절하였습니다."
 sic.33.a:0 "빌어먹을 캐나다놈들"
 
-sic.34.t:0 "양시칠리아가 제국 협정 가입을 요청합니다"
-sic.34.d:0 "양시칠리아 왕국의 특사가 오늘 베를린에 도착하여 그들의 왕국이 제국 협정에 가입할 가능성에 대해 논의했습니다. 우리는 그들을 들여보내주어야 할까요, 아니면 필요없다 해야 할까요?"
+sic.34.t:0 "양시칠리아의 제국 조약 가입 요청"
+sic.34.d:0 "양시칠리아 왕국의 특사가 오늘 베를린에 도착하여 그들의 왕국이 제국 조약에 가입할 가능성에 대해 논의했습니다. 우리는 그들을 들여보내주어야 할까요, 아니면 필요없다 해야 할까요?"
 sic.34.a:0 "그들을 들여보내자"
 sic.34.b:0 "우리는 그들이 필요없다"
 
 sic.35.t:0 "독일의 승낙"
-sic.35.d:0 "독일은 우리의 제안을 받아들였고 우리는 이제 제국 협정의 회원국입니다."
+sic.35.d:0 "독일은 우리의 제안을 받아들였고 우리는 이제 제국 조약의 회원국입니다."
 sic.35.a:0 "좋았어!"
 
 sic.36.t:0 "독일의 거절"
-sic.36.d:0 "독일은 우리의 협상국 가입 제안을 거절하였습니다"
+sic.36.d:0 "독일은 우리의 제국 조약 가입 제안을 거절하였습니다"
 sic.36.a:0 "빌어먹을 독일놈들"
 
-sic.37.t:0 "양시칠리아가 오스트리아와의 동맹을 요청합니다"
+sic.37.t:0 "양시칠리아가 오스트리아에 동맹 요청"
 sic.37.d:0 "양시칠리아 왕국의 특사가 오늘 빈에 도착하여 그들의 왕국이 오스트리아 영역권에 가입할 가능성에 대해 논의했습니다. 우리는 그들을 들여보내주어야 할까요, 아니면 필요없다 해야 할까요?"
 sic.37.a:0 "그들을 들여보내자"
 sic.37.b:0 "우리는 그들이 필요없다"
@@ -526,7 +526,7 @@ sic.41.a:0 "They should learn their lessons"
 sic.41.b:0 "We should focus on reconciliation"
 
 sic.42.t:0 "군주주의 강화"
-sic.42.d:0 "북부 이탈리아는 2개의 공화국에 의해 통치되어 공화주의가 강합니다. 하지만 시간이 지나면서, 점점 더 많은 사람들이 군주제를 지지하고 있습니다. 우리가 공화주의를 100퍼센트 없앨 수는 없을 것이지만, 우리는 북부에서 황실이 점점 더 지지를 받고 있다는 것을 알 수 있습니다."
+sic.42.d:0 "북부 이탈리아는 2개의 공화국에 의해 통치되어 공화주의가 강합니다. 하지만 시간이 지나면서, 점점 더 많은 사람들이 군주제를 지지하고 있습니다. 우리가 공화주의를 100퍼센트 제거 할 수는 없을 것이지만, 우리는 북부에서 황실이 점점 더 지지를 받고 있다는 것을 알 수 있습니다."
 sic.42.a:0 "국왕 폐하 만세!"
 
 sic.43.t:0 "장군 편입"
@@ -534,7 +534,7 @@ sic.43.d:0 "Today, several of the generals that previously fought for the variou
 sic.43.a:0 "장군들은 이탈리아를 위해 싸워야한다!"
 sic.43.b:0 "우리에게 총을 겨눈자들은 필요없다"
 
-sic.44.t:0 "제국내 여성의 역할"
+sic.44.t:0 "제국 내 여성의 역할"
 sic.44.d:0 "In the Socialist Republic of Italy, the traditional roles of women were destroyed. However, now that we are in charge the question of Women's role in the empire has arisen. Some want us to double down on the traditional role for ladies to protect the family, while others think giving them the right to vote, but not run for office, is good enough. Finally, a smaller number, principally from the Social Democratic Partito Cristiano Democratico suggest full suffrage including both the right to vote and the right to run for office."
 sic.44.a:0 "전통의 가치를 강화 시킨다"
 sic.44.b:0 "여성들에게 투표권을 줘라"
