--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -253,7 +253,7 @@ HOL_the_united_state:0 "합중국"
 HOL_the_united_state_desc:0 "We ought to show unity at all times. Let us stand united as Dutchmen versus the world."
 HOL_foreign_policy:0 "네덜란드 외교 정책"
 HOL_foreign_policy_desc:0 "Now that we have stabilised our political order, it is time to look outwards again and examine whether we should re-emphasise our self-imposed neutrality or find allies in this new hostile world."
-HOL_join_mitteleuropa:0 "제국 협정에 가입"
+HOL_join_mitteleuropa:0 "제국 조약에 가입"
 HOL_join_mitteleuropa_desc:0 "Ever since the Boer War, we have been drifting towards the German cause, and if the Reichspakt falls to the godless syndicalists then we are likely finished as well. Let us fight for our own fate instead of having it forced upon us!"
 HOL_sustain_neutrality:0 "중립국 선언"
 HOL_sustain_neutrality_desc:0 "The Netherlands suffers from enough troubles without joining a devastating global conflict. We shall work with whomever reigns supreme after the conflict, as we have done many times before."
@@ -1065,7 +1065,7 @@ hol.22.d:0 "The Netherlands' hopeless position surrounded by hostile superpowers
 hol.22.a:0 "그들을 받아들이자!"
 hol.22.b:0 "네덜란드인이라. 아니."
 
-hol.23.t:0 "네덜란드와 제국 협정"
+hol.23.t:0 "네덜란드와 제국 조약"
 hol.23.d:0 "Under threat from the political forces of left and right, and surrounded by the hostile forces of syndicalists in Britain and France, the Dutch have come to us requesting a military alliance. While they had once considered joining us during the Weltkrieg, it appears that the situation is currently dire enough for them come down on our side."
 hol.23.a:0 "네덜란드인들은 우리의 사촌이다. 환영한다!"
 hol.23.b:0 "아니."
@@ -1091,7 +1091,7 @@ hol.27.d:0 "The Dutch government-in-exile has announced recently that they want 
 hol.27.a:0 "While odd, the Dutch could be useful allies."
 hol.27.b:0 "Westerners? No way."
 
-hol.28.t:0 "네덜란드 망명 정부가 제국 협정에 가입하려 하다"
+hol.28.t:0 "네덜란드 망명 정부가 제국 조약에 가입하려 하다"
 hol.28.d:0 "The Dutch government-in-exile has announced recently that they want to join the Reichspakt. It is not a completely unforeseen move because pro-German policy is popular in many circles including the ruling cabinet and the army. Do we want to allow the exiled royals to join our alliance?"
 hol.28.a:0 "Jawohl!"
 hol.28.b:0 "Why would we want the Dutch?"
@@ -1104,7 +1104,7 @@ hol.30.t:0 "일본이 네덜란드의 공영권 가입을 거부하다!"
 hol.30.d:0 "It seems the Japanese do not want us in their alliance..."
 hol.30.a:0 "Such a miserable mistake."
 
-hol.31.t:0 "독일이 네덜란드의 제국 협정 가입을 거부하다!"
+hol.31.t:0 "독일이 네덜란드의 제국 조약 가입을 거부하다!"
 hol.31.d:0 "It seems the Germans do not want us in their alliance..."
 hol.31.a:0 "Such a miserable mistake."
 
@@ -2159,7 +2159,7 @@ holfocus.68.t:0 "라인 선"
 holfocus.68.d:0 "One of the policies of the 국가재건연합 to recover from Black Monday was a keynesian project to have people build fortifications along the Rhine as a safeguard against a hypothetical advance of the syndicalists from France. This way, it was argued, did the government both spend money to increase the purchasing power of the common man, while also making preparations for the future."
 holfocus.68.a:0 "No syndicalist shall set foot beyond the Rhine!"
 
-holfocus.69.t:0 "[HOL.GetNameDefCap]이(가) 제국 협정에 가입하기를 원하다"
+holfocus.69.t:0 "[HOL.GetNameDefCap]이(가) 제국 조약에 가입하기를 원하다"
 holfocus.69.d:0 "The Dutch have expressed their desire to join the Reichspakt military alliance. How should we respond?"
 holfocus.69.a:0 "Welcome!"
 holfocus.69.b:0 "We don't need them."
@@ -2384,7 +2384,7 @@ holfocus.402.b:0 "Tactical Bombers will make a nice addition to the LVA."
 
 ### Tasteful flavor ###
 holflavor.1.t:0 "중앙 유럽 표준시로 전환?"
-holflavor.1.d:0 "세계대전이 끝난 이후 네덜란드에 한가지 제안이 들어왔는데, 그것은 현재 사용중인 그리니치 평균시에서 중앙 유럽 표준시로 옮겨가야 한다는 것이었습니다.\n\n하지만 영국 혁명 이후로, 이러한 요구는 점점 더 거세졌고, 이 시간대에 우리의 무역 상대국은 없게 되었습니다. 네덜란드는 브리튼과 프랑스의 생디칼리즘 정권을 아직 외교적으로 인정하지 않고 있으며, 플랑드르-왈로니아는 독일의 압력으로 이미 중앙 유럽 표준시로 옮겨갔습니다.\n\n이 논쟁은 네덜란드가 암스테르담의 자연적인 시간대를 따라야 한다는 쪽과 네덜란드가 카이저라이히 - 결국 가장 중요한 무역 파트너이다 - 의 시간대로 옮겨가야 한다는 쪽 사이로 급속하게 퍼지면서 1930년대 동안 조용히 진행되었습니다. 마침내 후자를 지지한다는 합의가 1935년에 이루어진 후, 1936년 2월 첫째날부터 국가의 시간대를 늦춰 제국협정과 동일시하는 최종 결정이 우리 손에 달렸습니다."
+holflavor.1.d:0 "세계대전이 끝난 이후 네덜란드에 한가지 제안이 들어왔는데, 그것은 현재 사용중인 그리니치 평균시에서 중앙 유럽 표준시로 옮겨가야 한다는 것이었습니다.\n\n하지만 영국 혁명 이후로, 이러한 요구는 점점 더 거세졌고, 이 시간대에 우리의 무역 상대국은 없게 되었습니다. 네덜란드는 브리튼과 프랑스의 생디칼리즘 정권을 아직 외교적으로 인정하지 않고 있으며, 플랑드르-왈로니아는 독일의 압력으로 이미 중앙 유럽 표준시로 옮겨갔습니다.\n\n이 논쟁은 네덜란드가 암스테르담의 자연적인 시간대를 따라야 한다는 쪽과 네덜란드가 카이저라이히 - 결국 가장 중요한 무역 파트너이다 - 의 시간대로 옮겨가야 한다는 쪽 사이로 급속하게 퍼지면서 1930년대 동안 조용히 진행되었습니다. 마침내 후자를 지지한다는 합의가 1935년에 이루어진 후, 1936년 2월 첫째날부터 국가의 시간대를 늦춰 제국 조약과 동일시하는 최종 결정이 우리 손에 달렸습니다."
 holflavor.1.a:0 "가자!"
 holflavor.1.b:0 "그리니치 평균시가 더 익숙하니 취소하라!"
 
