--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -98,7 +98,7 @@ POL_minority_rights:0 "소수층의 권리"
 POL_a_new_constitution:0 "새 헌법 제정"
 POL_lithuanian_shipbuilding:0 "리투아니아의 조선 기술"
 POL_new_trade_opportunities:0 "해군 장교 양성"
-POL_join_mitteleuropa:0 "제국협정 가입"
+POL_join_mitteleuropa:0 "제국 조약 가입"
 POL_german_advisors:0 "독일 고문단 초청"
 POL_join_economic_bloc:0 "유럽 경제 연합체 가입"
 POL_german_tech_sharing:0 "카이저 빌헬름 협회"
@@ -196,7 +196,7 @@ POL_a_new_constitution_desc:0 "폴란드의 새로운 역사에서 새로운 폴
 POL_lithuanian_shipbuilding_desc:0 "폴란드는 바다에 접근할 수 없지만 리투아니아는 가능합니다. 리투아니아의 해안선을 이용함으로써 우리는 우리의 새로운 해군을 만들기 시작할 수 있습니다."
 POL_kickstart_navy_desc:0 "폴란드는 다시 바다에 접근할 수 있게 되었고, 폴란드 해군이 한번 더 항해하려면 우리는 새로운 해군 인프라 건설을 빨리 시작해야 합니다."
 POL_new_trade_opportunities_desc:0 "새로운 해군과 함께 새로운 해군 장교들이 옵니다. 우리는 앞으로 몇년 안에 새로운 해군 장교들을 훈련시킬 주목할 만한 선원들을 찾아 전국을 샅샅이 뒤져야 합니다."
-POL_join_mitteleuropa_desc:0 "폴란드는 유럽에서 홀로 서있으며, 아무런 친구도 동맹국도 없습니다. 새로운 왕 프레데릭 크리스티안 사스키와 함께, 우리의 독일과의 유대는 그 어느 때보다 강합니다. 우리는 이 기회를 이용하여 제국 협정 동맹에 대한 수락을 활용해야 합니다."
+POL_join_mitteleuropa_desc:0 "폴란드는 유럽에서 홀로 서있으며, 아무런 친구도 동맹국도 없습니다. 새로운 왕 프레데릭 크리스티안 사스키와 함께, 우리의 독일과의 유대는 그 어느 때보다 강합니다. 우리는 이 기회를 이용하여 제국 조약 동맹에 대한 수락을 활용해야 합니다."
 POL_german_advisors_desc:0 "우리가 유럽에서 정치적으로 타당하게 남아있기 위해서는 군사적, 정치적 구조를 개혁하는 것이 가장 중요합니다. 독일과의 긴밀한 유대 관계를 이용함으로써, 우리는 그들이 우리의 군사력을 현대화하기 위해 고문을 보내도록 허락할 수 있습니다."
 POL_join_economic_bloc_desc:0 "우리의 새로운 정치 상황은 우리에게 독일의 경제 블록에 참여할 수 있는 유일한 기회를 제공했습니다. 그렇게 함으로써, 우리는 우리의 경제를 강화하고 이웃 국가들과 중요한 무역 거래를 확보할 수 있습니다."
 POL_german_tech_sharing_desc:0 "독일의 기술력은 유럽에서 두번째로 높습니다. 우리는 우리 모두가 최신 군사 기술에 접근 할 수 있도록 기술 노력에 동참해야합니다."
@@ -349,9 +349,9 @@ POL_SHUNNED_US:0 "폴란드는 우리를 모욕했다"
 POL_DEFIED_US:0 "폴란드는 우리를 축복했다"
 POL_SHUNNED_US_BIG:0 "폴란드는 우리를 모욕했다"
 POL_LIT_SEP:0 "폴란드-리투아니아 연방은 없다"
-POL_JOIN_MITT:0 "폴란드는 제국 협정에 가입했다"
-POL_NO_JOIN_MITT:0 "폴란드는 제국 협정에 가입하지 않는다"
-POL_JOIN_MITT_GER:0 "폴란드는 제국 협정에 가입했다"
+POL_JOIN_MITT:0 "폴란드는 제국 조약에 가입했다"
+POL_NO_JOIN_MITT:0 "폴란드는 제국 조약에 가입하지 않는다"
+POL_JOIN_MITT_GER:0 "폴란드는 제국 조약에 가입했다"
 POL_GER_REFUSES_MIT:0 "독일 제국이 우리를 거절했다"
 POL_ANNEX_GAL:0 "폴란드는 갈리치아-로도메리아를 합병했다"
 POL_NATI_GER:0 "폴란드의 민족주의 정부"
@@ -369,8 +369,8 @@ POL_SYNDIE_FRA:0 "폴란드의 생디칼리스트 정부"
 POL_SYNDIE_ENG:0 "폴란드의 생디칼리스트 정부"
 POL_SYNDIE_SRI:0 "폴란드의 생디칼리스트 정부"
 POL_SYNDIE_SOV:0 "폴란드의 생디칼리스트 정부"
-POL_NO_UKR_MITT:0 "제국 협정과의 유화 정책"
-POL_NO_UKR_INT:0 "제국 협정과의 유화 정책"
+POL_NO_UKR_MITT:0 "제국 조약과의 유화 정책"
+POL_NO_UKR_INT:0 "제국 조약과의 유화 정책"
 POL_REFUSED_OFFER:0 "폴란드는 거절했다"
 POL_REFUSED_OFFER_LAND:0 "폴란드는 거절했다"
 UKR_REFUSED_OFFER:0 "우크라이나는 동맹을 거절했다"
