--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
@@ -101,7 +101,7 @@ RUS_befriend_finland_desc:0 "With Finland being so reasonable it's not impossibl
 can_only_take_one_alliance:0 "§GYou can only take one of the focus to choose an alliance, choose wisely!§!"
 RUS_join_entente:0 "협상국 가입"
 RUS_join_entente_desc:0 "During the Weltkrieg we stood beside Great Britain and France against the Germanic Huns and their allies. We have not forgotten the cause!"
-RUS_join_mitteleuropa:0 "제국협정 가입"
+RUS_join_mitteleuropa:0 "제국 조약 가입"
 RUS_join_mitteleuropa_desc:0 "While the despicable Germans are the cause for our current situation, the main threat of the world cannot simply be ignored. The rise of Syndicalism changed everything."
 RUS_join_internationale:0 "인터내셔널 가입"
 RUS_join_internationale_desc:0 "We should join ranks with the syndicalists to contain the German, and other, threats. The false Emperors of the world will tremble when they hear the news!"
