--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -93,7 +93,7 @@ BEL_Good_Deal:0 "친플란데런-발로니엔 무역 협정"
 BEL_Schelle_Power:0 "셸러 발전소"
 BEL_Schelle_Power_desc:0 "우리나라의 막대한 전력 수요를 유지하기 위해 건설된 셸러 발전소는 대륙에서 가장 규모가 크며 우리 산업의 발전에 도움이 될 것입니다."
 BEL_Cement_Export:0 "시멘트 수출"
-BEL_Cement_Export_desc:0 "검은 월요일 위기로 인해 제국 협정의 많은 정부는 복구를 시작하기 위해 대규모 건설 프로젝트에 자금을 지원하기로 결정했습니다. 우리는 시멘트 수출을 확대함으로써 큰 석유 화학, 철강 및 섬유 산업이 회복 될 때까지 우리 경제를 다시 도울 수 있게 도와줌으로써 기꺼이 이익을 얻고 있습니다."
+BEL_Cement_Export_desc:0 "검은 월요일 위기로 인해 제국 조약의 많은 정부는 복구를 시작하기 위해 대규모 건설 프로젝트에 자금을 지원하기로 결정했습니다. 우리는 시멘트 수출을 확대함으로써 큰 석유 화학, 철강 및 섬유 산업이 회복 될 때까지 우리 경제를 다시 도울 수 있게 도와줌으로써 기꺼이 이익을 얻고 있습니다."
 BEL_Abolish_Flemish_Council_idea:0 "플랑드르 의회 폐지"
 BEL_Abolish_Flemish_Council_idea_desc:0 "군주와 그의 측근 보좌관들을 중심으로 권력을 분산시키려는 노력의 일환으로, 정부는 플랑드르 의회를 폐지했습니다."
 BEL_Flemish_Council_desc:0 "아달베르트의 뒤에 플랑드르 주민들을 정렬시키기 위해, 그는 지역 특권층에게 보다 결정적인 집행 권한을 허용하는 옛 권한을 보장하고 복원했습니다."
