--- a/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
@@ -779,7 +779,7 @@ SPO_recruit_supporters:0 "입헌주의자 고용 지원"
 SPO_recruit_supporters_desc:0 "민주주의를 위한 투쟁은 상파울루의 경계를 넘어 확산되어야 합니다!"
 BRA_join_internationale:0 "인터내셔널 가입"
 BRA_join_internationale_desc:0 "우리가 우리 자신의 사슬을 끊은 것은 충분하지 않습니다. 전 세계의 싸움에 동참해서는 안 되며, 사방에 있는 노동자들의 사슬을 끊는 일에 전념해야 합니다!"
-BRA_join_reichspakt:0 "제국협정 가입"
+BRA_join_reichspakt:0 "제국 조약 가입"
 BRA_join_reichspakt_desc:0 "우리는 미래에 우리의 독립을 유지할 단 하나의 희망만 가지고 있습니다: 그리고 그것은 우리의 운명을 [GER.GetNameDef]에 던졌습니다."
 BRA_join_entente:0 "협상국 가입"
 BRA_join_entente_desc:0 "국제적인 동맹에서 대영제국에 합류하고 세계 질서를 회복하기 위한 전쟁에서 그들과 함께 싸우는 것이 우리의 최대 관심사입니다."
