--- a/Kaiserreich Korean Translation/localisation/KR_Federated_States_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Federated_States_of_America_l_english.yml
@@ -20,4 +20,4 @@ FSA_authoritarian_democrat_party_long:0 "군사평의회"
 FSA_paternal_autocrat_party:0 "군사평의회"
 FSA_paternal_autocrat_party_long:0 "군사평의회"
 FSA_national_populist_party:0 "미국 제일당"
-FSA_national_populist_party_long:0 "미국 당"
+FSA_national_populist_party_long:0 "미국 제일당"
