--- a/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
@@ -16,7 +16,7 @@ SWI_italian_assisstance:0 "이탈리아와의 동맹"
 SWI_black_spot_of_europe:0 "유럽의 흑점"
 SWI_defend_the_borders:0 "국경 방어"
 SWI_referendum_syndicalism:0 "국민 투표: 연방 정부 폐지"
-SWI_german_economic_assisstance:0 "제국협정의 경제적 지원"
+SWI_german_economic_assisstance:0 "제국 조약의 경제적 지원"
 SWI_joint_command:0 "합동 군사령부"
 SWI_ban_all_foreigners:0 "모든 외국인 추방"
 SWI_expand_the_verdingkinder:0 "모든 어린이는 계약 어린이이다"
@@ -48,7 +48,7 @@ SWI_resist_to_the_end:0 "Resist to the End"
 SWI_ski_divisions:0 "Assemble the Ski Divisions"
 SWI_mountineer_defense:0 "능동 방어"
 SWI_luftwaffe:0 "슈바이처 루프트바페"
-SWI_mitteleuropa:0 "제국협정 가입"
+SWI_mitteleuropa:0 "제국 조약 가입"
 SWI_national_bank:0 "Federal Act on Banks and Savings Banks"
 SWI_free_our_skies:0 "Free our Skies"
 SWI_swiss_guard:0 "스위스 근위대 증강"
