--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -48,9 +48,9 @@ UKR_New_Agriculture_desc:0 "새로운 인프라와 기술 발전으로 우크라
 UKR_Splendid_Isolation:0 "훌륭한 격리"
 UKR_Splendid_Isolation_desc:0 "보호를 위해 외국의 권력에 의존하기보다는 우크라이나는 국제 문제에서 자신의 자리를 굳히기 위해 노력해 왔습니다."
 UKR_Ties_Germany:0 "독일과 유대"
-UKR_Ties_Germany_desc:0 "우크라이나는 독일과 제국협정에 대한 약속을 재확인하고 독일 주도의 동맹관계인 동쪽의 측면을 확보하기 위한 노력해 왔습니다."
+UKR_Ties_Germany_desc:0 "우크라이나는 독일과 제국 조약에 대한 약속을 재확인하고 독일 주도의 동맹관계인 동쪽의 측면을 확보하기 위한 노력해 왔습니다."
 UKR_Ties_Russia:0 "러시아와 유대"
-UKR_Ties_Russia_desc:0 "우크라이나는 러시아 팽창주의자들의 열망에 대한 우크라이나의 의심에도 불구하고 옛 대주교인 러시아에 대한 제국협정을 포기했습니다."
+UKR_Ties_Russia_desc:0 "우크라이나는 러시아 팽창주의자들의 열망에 대한 우크라이나의 의심에도 불구하고 옛 대주교인 러시아에 대한 제국 조약을 포기했습니다."
 UKR_Rada_diss:0 "최고위 라다의 해체"
 UKR_Rada_diss_desc:0 "헤트만, 파블로 스코로파드스키는 국왕을 설득하여 우크라이나 라다를 해산시켰습니다. 라다의 반대없이 스코로파드스키는 이제 그가 적합하다고 생각하는 우크라이나를 통치할 수 있습니다."
 UKR_Local_radas:0 "지역 라다의 주 통치"
