--- a/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
@@ -433,7 +433,7 @@ ALB_paternal_autocrat_party:0 "인민당"
 ALB_paternal_autocrat_party_long:0 "인민당"
 ALB_social_liberal_party:0 "인민당"
 ALB_social_liberal_party_long:0 "인민당"
-ALB_syndicalist_party:0 "KONARE"
+ALB_syndicalist_party:0 "국가 혁명 위원회"
 ALB_syndicalist_party_long:0 "국가 혁명 위원회"
 ALB_totalist_party:0 "전위당"
 ALB_totalist_party_long:0 "알바니아 전위당"
