--- a/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_In_Exile_l_english.yml
@@ -7,13 +7,13 @@ GEX_radical_socialist_party:0 "무장 노동조합 총연맹"
 GEX_radical_socialist_party_long:0 "무장 노동조합 총연맹"
 GEX_syndicalist_party:0 "인터내셔널 독일 지부/생디칼리스트 당"
 GEX_syndicalist_party_long:0 "인터내셔널 독일 지부/생디칼리스트 당"
-GEX_social_democrat_party:0 "독일 사회 민주당"
-GEX_social_democrat_party_long:0 "독일 사회 민주당"
-GEX_social_liberal_party:0 "진보 인민당"
-GEX_social_liberal_party_long:0 "진보 인민당"
-GEX_market_liberal_party:0 "국민 자유당"
-GEX_market_liberal_party_long:0 "국민 자유당"
-GEX_social_conservative_party:0 "젠트룸"
+GEX_social_democrat_party:0 "독일 사회민주당"
+GEX_social_democrat_party_long:0 "독일 사회민주당"
+GEX_social_liberal_party:0 "진보인민당"
+GEX_social_liberal_party_long:0 "진보인민당"
+GEX_market_liberal_party:0 "국민자유당"
+GEX_market_liberal_party_long:0 "국민자유당"
+GEX_social_conservative_party:0 "중앙당"
 GEX_social_conservative_party_long:0 "중앙당"
 GEX_authoritarian_democrat_party:0 "독일 보수당"
 GEX_authoritarian_democrat_party_long:0 "독일 보수당"
