--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -506,7 +506,7 @@ ARG_diplomacy_decisions:0 "대외 정책"
 
 ARG_Pressuring_Uruguay:0 "우루과이 압박"
 ARG_Pressuring_Uruguay_desc:0 "브라질인들이 이 지역을 장악하고 있는 것과 다르게 갑자기 우루과이에 대해 이념적으로 대립하게 됨에 따라, 우리는 그들에게 가능한 한 브라질의 위험을 막기 위해 우리의 보호를 제공해야 합니다." 
-ARG_Joining_the_Reichspakt:0 "제국협정에 지원"
+ARG_Joining_the_Reichspakt:0 "제국 조약에 지원"
 ARG_Joining_the_Entente:0 "협상국에 지원"
 
 ARG_companies_decisions:0 "외국 장비 수입"
@@ -673,13 +673,13 @@ argfor.8.t:0 "로마에 도착한 아르헨티나 자원병들"
 argfor.8.d:0 "생디칼리스트들의 침략에 분개하고 그들의 정부에 의해 휩쓸 였던 수천 명의 젊은 아르헨티나 인들이 교황을 위해 목숨을 바치기 위해 도착했습니다. 그들은 우리 군대를 돕기 위해 많은 무기와 물품을 가져왔습니다."
 argfor.8.a:0 "모든 기독교는 하나로 뭉칠 것이다!"
 
-argfor.9.t:0 "아르헨티나는 제국협정에 합류하기를 원한다"
+argfor.9.t:0 "아르헨티나는 제국 조약에 합류하기를 원한다"
 argfor.9.d:0 "카를레스가 물러나고 GOU가 개입하여 지배를 맡은 후, 그들은 외교 정책에 대한 독일의 우호적인 접근을 따랐습니다. 우리 대륙을 가로질러 전쟁이 일어나고 수천 명의 독일인들이 코뮌의 무기에 죽어 가는 가운데, 그들은 전쟁에 지원을 하고 공식적으로 동맹에 가입하고 싶다는 의사를 밝혔습니다."
 argfor.9.a:0 "그들을 받아들이다"
 argfor.9.b:0 "그들의 도움은 필요 없어"
 
-argfor.91.t:0 "아르헨티나는 제국협정에 합류하기를 원한다"
-argfor.91.d:0 "우리나라를 지키기 위한 큰 관심과 더 중요한 것은 우리 경제가 존속하는 것을 유지하기 위해 아르헨티나 정권이 자신들의 대륙을 뛰어넘어 우리의 군사 동맹인 제국협정에 가입하도록 촉구했습니다. 우리 대륙을 가로질러 전쟁이 일어나고 수천 명의 독일인들이 코뮌의 무기에 죽어 가는 가운데, 그들은 전쟁에 지원을 하고 공식적으로 동맹에 가입하고 싶다는 의사를 밝혔습니다."
+argfor.91.t:0 "아르헨티나는 제국 조약에 합류하기를 원한다"
+argfor.91.d:0 "우리나라를 지키기 위한 큰 관심과 더 중요한 것은 우리 경제가 존속하는 것을 유지하기 위해 아르헨티나 정권이 자신들의 대륙을 뛰어넘어 우리의 군사 동맹인 제국 조약에 가입하도록 촉구했습니다. 우리 대륙을 가로질러 전쟁이 일어나고 수천 명의 독일인들이 코뮌의 무기에 죽어 가는 가운데, 그들은 전쟁에 지원을 하고 공식적으로 동맹에 가입하고 싶다는 의사를 밝혔습니다."
 argfor.91.a:0 "그들을 받아들이다"
 argfor.91.b:0 "그들의 도움은 필요 없어"
 
@@ -689,7 +689,7 @@ argfor.92.a:0 "그들을 받아들이다"
 argfor.92.b:0 "그들의 도움은 필요 없어"
 
 argfor.10.t:0 "독일은 우리의 제의를 받아들인다"
-argfor.10.d:0 "그들의 카이저는 우리의 제의를 기꺼이 받아들였고, 정부는 어제 아르헨티나가 제국협정에 참가할 것이라고 세계에 발표했습니다."
+argfor.10.d:0 "그들의 카이저는 우리의 제의를 기꺼이 받아들였고, 정부는 어제 아르헨티나가 제국 조약에 참가할 것이라고 세계에 발표했습니다."
 argfor.10.a:0 "전투 준비!"
 
 argfor.102.t:0 "캐나다는 우리의 제의를 받아들인다"
