--- a/Kaiserreich Korean Translation/localisation/KR_Insulindia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Insulindia_l_english.yml
@@ -49,12 +49,12 @@
  INS_social_liberal_party_long:0 "인술인디아 사회당"
  INS_market_liberal_party:0 "직능 단체 연합 정당"
  INS_market_liberal_party_long:0 "직능 단체 연합 정당"
- INS_social_conservative_party:0 "Nahdlatul Ulama"
- INS_social_conservative_party_long:0 "Nahdlatul Ulama"
+ INS_social_conservative_party:0 "나흐타둘 우라마"
+ INS_social_conservative_party_long:0 "나흐타둘 우라마"
  INS_authoritarian_democrat_party:0 "인술인디아 국민당"
  INS_authoritarian_democrat_party_long:0 "인술인디아 국민당"
- INS_paternal_autocrat_party:0 "Ngi-Sultan Monarchists/DI"
- INS_paternal_autocrat_party_long:0 "Ngi-Sultan Monarchists/Darul Islam"
+ INS_paternal_autocrat_party:0 "Ngi-Sultan 군주주의자/다룰이슬람"
+ INS_paternal_autocrat_party_long:0 "Ngi-Sultan 군주주의자/다룰이슬람"
  INS_national_populist_party:0 "APRA"
  INS_national_populist_party_long:0 "Angkatan Perang Ratu Adil"
  INS_pobsi_short:0 "SOBSI"
