--- a/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
@@ -8,9 +8,9 @@ occupy_rhine:0 "라인란트 점령"
 russian_dominance:0 "러시아 영향권"
 
 ### Opinion Modifiers ###
-GER_accept_deal_rus:0 "러시안 딜을 받아들임"
-GER_refuse_deal_rus1:0 "러시안 딜을 거부함"
-GER_refuse_deal_rus2:0 "러시안 딜을 거부함"
+GER_accept_deal_rus:0 "러시아가 거래를 받아들임"
+GER_refuse_deal_rus1:0 "러시아가 거래를 거부함"
+GER_refuse_deal_rus2:0 "러시아가 거래를 거부함"
 chose_our_hos:0 "우리의 국가원수를 선택함"
 let_us_choose_our_hos:0 "국가원수를 선택하도록 내버려둠"
 SWI_gave_back_romandy:0 "로망디 반환을 거부함"
@@ -27,10 +27,10 @@ DEN_forced_schleswig2:0 "북부 슐레히비히를 빼앗음"
 DDR_forced_thuringia1:0 "튀링겐을 빼앗음"
 DDR_forced_thuringia2:0 "튀링겐을 빼앗음"
 GER_liberated_UK:0 "독일이 영국을 해방시킴"
-GER_created_republic_GBR:0 "독일이 브리티시 공화국을 세움"
-NFA_refused_deal_GER1:0 "National France refused the deal"
-NFA_refused_deal_GER2:0 "National France refused the deal"
-NFA_accepted_deal_GER:0 "National France accepted the deal"
+GER_created_republic_GBR:0 "독일이 브리튼 공화국을 세움"
+NFA_refused_deal_GER1:0 "국민 프랑스가 거래를 거부함"
+NFA_refused_deal_GER2:0 "국민 프랑스가 거래를 거부함"
+NFA_accepted_deal_GER:0 "국민 프랑스가 거래를 받아들임"
 GER_supported_flawa_claim:0 "Supported the Belgian claims"
 GER_ceded_flawa_claim:0 "Ceded French Flanders"
 GER_refused_flawa_claim:0 "Refused to cede French Flanders"
@@ -147,20 +147,20 @@ part.32.d:0 "현재 독일은 역사적으로 항상 프랑스에 속해 왔던 
 part.32.a:0 "알자스-로렌을 요구한다!"
 part.32.b:0 "우리가 가진 자원은 그들이 가진 것을 뛰어넘는다."
 
-part.33.t:0 "프랑스가 엘자스-로트링엔을 요구하다."
-part.33.d:0 "프랑스 정부가 현재 독일이 통제하는 과거 황실의 지역이였던 엘사스로트링엔을 요구했습니다."
-part.33.a:0 "강제로 독일이 엘사스로트링겐을 프랑스에게 이양하게 해라."
+part.33.t:0 "프랑스가 알자스-로렌을 요구하다."
+part.33.d:0 "프랑스 정부가 현재 독일이 통제하는 과거 황실의 지역이였던 엘사스-로트링겐을 요구했습니다."
+part.33.a:0 "강제로 독일이 엘사스-로트링겐을 프랑스에게 이양하게 해라."
 part.33.b:0 "타협하여, 로렌은 프랑스에게, 엘사스는 독일에 귀속시킨다!"
 part.33.c:0 "누가 여기서 지도를 그리고 있는가!?"
 part.33.e:0 "사람들이 결정하게 하라."
 
-part.34.t:0 "엘자스로트링엔 국민 투표"
+part.34.t:0 "엘사스-로트링겐 국민 투표"
 part.34.d:0 "The Russian state, acting as mediator in the territorial dispute between France and the German empire, has decided that a plebiscite must be held in Elsass-Lothringen."
 part.34.a:0 "결과를 기다리자."
 
-part.35.t:0 "엘자스로트링엔 국민 투표"
+part.35.t:0 "엘사스-로트링겐 국민 투표"
 part.35.d:0 "사람들이 투표소로 몰려가 결정을 내렸습니다."
-part.35.a:0 "엘자스로트링엔은 독일의 것이다!"
+part.35.a:0 "엘사스-로트링겐은 독일의 것이다!"
 part.35.b:0 "알자스-로렌은 프랑스의 것이다!"
 
 part.36.t:0 "러시아가 프랑스를 지원하다."
@@ -307,9 +307,9 @@ part.61.t:0 "런던의 괴뢰 정부"
 part.61.d:0 "런던의 새 정부는 우리 통제 하에 있습니다."
 part.61.a:0 "팍스 유로파!"
 
-part.62.t:0 "브리튼이 군주 국가가 되어야할까요?"
+part.62.t:0 "브리튼이 군주국이 되어야할까요?"
 part.62.d:0 "As we are establishing the new government of Great Britain we have the opportunity to install a new King of Great Britain. It may, however, be wise to let the British choose their own government lest they rise against us."
-part.62.a:0 "연합왕국 영국을 다시 만들어라!"
+part.62.a:0 "연합왕국을 다시 만들어라!"
 part.62.b:0 "그레이트 브리튼이 공화국이 되도록 해라."
 
 part.63.t:0 "Germany has imposed a King on us"
