--- a/Kaiserreich Korean Translation/localisation/KR_Lombardy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lombardy_l_english.yml
@@ -7,19 +7,19 @@ LOM_syndicalist_party:0 "롬바르디아 노동 조합"
 LOM_syndicalist_party_long:0 "롬바르디아 노동 조합"
 LOM_radical_socialist_party:0 "개혁사회당"
 LOM_radical_socialist_party_long:0 "개혁사회당"
-LOM_social_democrat_party:0 "PPL"
+LOM_social_democrat_party:0 "롬바르디아 민중당"
 LOM_social_democrat_party_long:0 "롬바르디아 민중당"
-LOM_social_liberal_party:0 "PCL"
+LOM_social_liberal_party:0 "기독교자유당"
 LOM_social_liberal_party_long:0 "기독교자유당"
-LOM_market_liberal_party:0 "PL"
+LOM_market_liberal_party:0 "자유당"
 LOM_market_liberal_party_long:0 "자유당"
 LOM_social_conservative_party:0 "카톨릭 연맹"
 LOM_social_conservative_party_long:0 "카톨릭 연맹"
-LOM_authoritarian_democrat_party:0 "PA"
+LOM_authoritarian_democrat_party:0 "농민당"
 LOM_authoritarian_democrat_party_long:0 "농민당"
 LOM_paternal_autocrat_party:0 "비스콘티 가문"
 LOM_paternal_autocrat_party_long:0 "비스콘티 가문"
-LOM_national_populist_party:0 "LL"
+LOM_national_populist_party:0 "롱고바르다 연맹"
 LOM_national_populist_party_long:0 "롱고바르다 연맹"
 
 ### National Focuses ###
