--- a/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
@@ -3,7 +3,7 @@ l_english:
 ### Flags, Tooltips and Opinion Modifiers ###
 CUB_all_CAN:0 "쿠바와 캐나다 동맹"
 CUB_no_all_CAN:0 "캐나다가 쿠바와 동맹하는 것을 거절"
-CUB_no_int_CAN:0 "쿠바가 서인도 연합에 합병되는 것을 거부"
+CUB_no_int_CAN:0 "쿠바가 서인도 연합국에 합병되는 것을 거부"
 CUB_CAF_Cuban_Minster_no:0 "장관들은 선거를 기다릴 것입니다"
 
 ### Ideas ###
@@ -40,25 +40,25 @@ cuba.1.b:0 "쿠바 스스로 막아낼 수 있다!"
 cuba.2.t:0 "쿠바가 보호를 요청"
 cuba.2.d:0 "The increasing power of the Combined Syndicates of America has been of great concern to the Cuban government. President Vinageras fears that, now that the CSA control large parts of the former USA's south and east, Cuba will soon be threatened by the godless Syndicalists. With the USA shattered, Cuba pleads for our protection."
 cuba.2.a:0 "새로운 동맹으로 끌어들이자"
-cuba.2.b:0 "좋다, 대신에 쿠바는 서인도 연합에 들어가야한다"
+cuba.2.b:0 "좋다, 대신에 쿠바는 서인도 연합국에 들어가야한다"
 cuba.2.c:0 "우리는 쿠바를 보호할 수 없어..."
 
 cuba.3.t:0 "쿠바가 홀로 남겨지다"
 cuba.3.d:0 "We have been informed that Cuba asked the Entente for protection against us, but the talks led to nothing and Cuba is now standing alone."
 cuba.3.a:0 "좋은 뉴스군"
 
-cuba.4.t:0 "서인도 연합에 참가하시겠습니까?"
+cuba.4.t:0 "서인도 연합국에 참가하시겠습니까?"
 cuba.4.d:0 "The Canadian government has offered us to join the Entente, but we are required to become part of the 서인도 연합. Cuba would retain its internal sovereignty, but matters concerning the military, economy, and foreign policy would be decided by the federal government in Georgetown."
 cuba.4.a:0 "절대 그럴수없다! 우리는 자유로운 독립국가다"
 cuba.4.b:0 "달리 선택지가 없다, 우린 빨갱이들과 싸우기에 역부족해..."
-cuba.4.c:0 "좋다, 연방에 가입하겠지만, 공정한 거래를 원한다..."
+cuba.4.c:0 "좋다, 연합에 가입하겠지만, 공정한 거래를 원한다..."
 
 cuba.5.t:0 "우리 정부에 쿠바 장관진을 채용할까요?"
 cuba.5.d:0 "Cuba has petitioned to join our Federation, but demands fair political representation in our government. Considering that Cuba's population is as large as the entire Federation's, the request seems reasonable. But some of our ministers fear that that Cubans will dominate our government and the Federation."
 cuba.5.a:0 "납득가능한 요청이다. 쿠바 정부관리들을 채용하라"
 cuba.5.b:0 "거절한다, 다음 선거를 기다리라고 해라"
 
-cuba.6.t:0 "서인도 연합이 우리의 요구를 거절함"
+cuba.6.t:0 "서인도 연합국이 우리의 요구를 거절함"
 cuba.6.d:0 "The bastards in Georgetown rejected our reasonable request. They have left us in the open, as a sacrificial lamb to be slaughtered by the godless Syndicalists"
 cuba.6.a:0 "빌어먹을 놈들!"
 cuba.6.b:0 "그럼 할 수 없다, 우리 스스로 빨갱이들과 싸우기엔 역부족이다..."
@@ -68,7 +68,7 @@ cuba.7.d:0 "After a brief war we finally annexed Cuba. We can now release them a
 cuba.7.a:0 "독립된 쿠바"
 cuba.7.b:0 "군사 점령이 더 낫다!"
 
-cuba.8.t:0 "쿠바가 서인도 연합에 가입하다"
+cuba.8.t:0 "쿠바가 서인도 연합국에 가입하다"
 cuba.8.d:0 "The island of Cuba has joined our Federation. It will take some time until Cuba is completely integrated into our political system, and the leftist dissenters on Cuba are dealt with. But our influence and power is certainly growing."
 cuba.8.a:0 "모든 서인도 국가들의 자유와 번영을 위하여!"
 
