--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -956,7 +956,7 @@ BUL_aerial_doctrines_desc:0 "We should teach our pilots new methods on how to fl
 ### Decisions ###
 BUL_foreign_policy_decisions:0 "대외 정책 결정"
 BUL_foreign_policy_decisions_desc:0 "It is crucial that we begin to shift our focus outward and forge alliances and/or establish ties with other nations so as to solidify our position on the world stage."
-BUL_join_the_weltkrieg:0 "제 2차 세계대전 참가"
+BUL_join_the_weltkrieg:0 "제 2차 세계대전 참전"
 BUL_join_the_weltkrieg_desc:0 "The Second Weltkrieg has broken out, with the Communards and the Germans facing off against each other in what many consider a battle of not only strength, but of attrition. If we are to have a say in the foreign affairs in the world, we must intervene as soon as possible."
 BUL_seizing_adrianople:0 "아드리아노플 점령"
 BUL_seizing_adrianople_desc:0 "The Turks have been allowed to remain in Thrace for far too long. It is time we put an end to their reign in the region and take Adrianople for ourselves."
