--- a/Kaiserreich Korean Translation/localisation/KR_Federated_States_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Federated_States_of_America_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 ### Parties ###
-FSA_totalist_party:0 "아메리카 공산당"
-FSA_totalist_party_long:0 "아메리카 공산당"
+FSA_totalist_party:0 "미국 공산당"
+FSA_totalist_party_long:0 "미국 공산당"
 FSA_radical_socialist_party:0 "아메리카 노동 연맹"
 FSA_radical_socialist_party_long:0 "아메리카 노동 연맹"
 FSA_syndicalist_party:0 "아메리카 노동 연맹"
